--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,9 @@ name=ESP32S_Library
 version=1.0.0
 author=VuSongVu
 maintainer=vuthiencuc@gmail.com
-sentence=Library for ESP32S-based project
-paragraph=Includes drivers for TFT display, sensors, flash storage, and battery monitoring.
+sentence=ESP32S Library for interfacing with various sensors and devices.
+paragraph=Provides easy interfacing with TFT display, sensors, buttons, and flash memory for ESP32-S.
 category=Sensors
-url=https://github.com/sensor_cell_esp
+url=https://github.com/vusongvu1234/sensor_cell_esp/
 architectures=esp32
+depends=Adafruit_GFX, Adafruit_ST7735, Adafruit_SHT31, Adafruit_MPU6050, VL53L0X, LittleFS
