--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Provides easy interfacing with TFT display, sensors, buttons, and flas
 category=Sensors
 url=https://github.com/vusongvu1234/sensor_cell_esp/
 architectures=esp32
-depends=Adafruit_GFX, Adafruit_ST7735, Adafruit_SHT31, Adafruit_MPU6050, VL53L0X, LittleFS
+depends=Adafruit GFX Library, Adafruit ST7735 and ST7789 Library, Adafruit SHT31 Library, Adafruit MPU6050 Library, VL53L0X, LittleFS
